[gd_scene load_steps=4 format=3 uid="uid://11of165somvk"]

[ext_resource type="Script" uid="uid://chxnqwgqnrjyo" path="res://Scripts/QuestListScreen.gd" id="1_q8cy7"]
[ext_resource type="Texture2D" uid="uid://dvstg4w3iedns" path="res://Assets/quest_list_background.png" id="2_eng1y"]

[sub_resource type="SystemFont" id="SystemFont_cn68s"]

[node name="QuestListScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_q8cy7")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_eng1y")
expand_mode = 4

[node name="MainMargin" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -217.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 204
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 20

[node name="VerticalLayout" type="VBoxContainer" parent="MainMargin"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="Label" type="Label" parent="MainMargin/VerticalLayout"]
layout_mode = 2
theme_override_colors/font_color = Color(0.450571, 0.290707, 0.0228394, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 4
theme_override_fonts/font = SubResource("SystemFont_cn68s")
theme_override_font_sizes/font_size = 59
text = "Available Quests"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CoinsLabel" type="Label" parent="MainMargin/VerticalLayout"]
layout_mode = 2
horizontal_alignment = 1

[node name="QuestScroll" type="ScrollContainer" parent="MainMargin/VerticalLayout"]
layout_mode = 2
size_flags_vertical = 3

[node name="QuestListContainer" type="VBoxContainer" parent="MainMargin/VerticalLayout/QuestScroll"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 50
